feat(homepage): add homepage

--- a/ebdjango/templates/index.html
+++ b/ebdjango/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Hello World!</h1>
-<div>From templates/index.html</div>
+<div>Welcome to my Django project.</div>
+<li><a href="/admin">Admin</a></li>
+<li><a href="/polls">Polls</a></li>
 </body>
 </html>
